--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -4,20 +4,34 @@
         <title>Original Work</title>
     </head>
     <body>
-        <h2>Level 1: Newbie</h2>
+        <h2><u>Level 1: Newbie</u></h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/16_J6Trw4yE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52791.72905364431!2d-118.23548949052582!3d34.210682024007646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2e9e1a4d3c011%3A0xf5e3f136c08751d6!2sLa+Ca%C3%B1ada+Flintridge%2C+CA+91011!5e0!3m2!1sen!2sus!4v1538698366711" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <h4>My Favorite Video Games:</h4>
+        <h4>My Favorite Soccer Players:</h4>
         <ul>
-            <li>Fifa</li>
-            <li>League of Legends</li>
-            <li>CSGO</li>
+            <li>Paul Pogba</li>
+            <li>Neymar</li>
+            <li>Shinji Kagawa</li>
         </ul>
-        <h2>Level 2: Apprentice</h2>
+    <br>
+        <h2><u>Level 2: Apprentice</u></h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/16_J6Trw4yE?start=180" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <video width="320" height="240" controls>
             <source src="WIN_20181004_17_32_28_Pro.mp4" type="video/mp4">
         </video>
-
+        <object width="300" height="300" data="Rotating_earth_(large).gif"></object>
+        </body>
+        </html>
+    <br>
+    <br>
+        <h2><u>Level 3: Master</u></h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/16_J6Trw4yE?start=180&cc_load_policy=0&rel=0&autoplay=1&color=white" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <video width="320" height="240" controls>
+                <source src="WIN_20181004_17_32_28_Pro.mp4" type="video/mp4">
+        </video>
+        <audio controls>
+            <source src="10a Upbeat Jazz Intro (Versions 1-4).mp3" type="audio/mp3">
+        </audio>
+        <object width="1000" height="800" data="https://www.washington.edu/"></object>
     </body>
 </html>
